--- a/src/index.css
+++ b/src/index.css
@@ -1623,6 +1623,7 @@ footer {
     border: 2px solid #ffffff20;
     padding: 2rem;
     border-radius: 24px;
+    backdrop-filter: blur(5px);
   }
   .skill-card {
     width: 100%;
